<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RotasActivity">

    <Button
        android:id="@+id/btnAnuncios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:background="@drawable/botoes"
        android:onClick="telaAnuncios"
        android:padding="5dp"
        android:text="@string/botao_rota_VerAnuncios"
        app:layout_constraintBottom_toTopOf="@+id/btnAnunciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAnunciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="256dp"
        android:background="@drawable/botoes"
        android:padding="5dp"
        android:text="@string/botao_rota_Anunciar"
        app:layout_constraintStart_toStartOf="@+id/btnAnuncios"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:background="@drawable/botoes"
        android:padding="5dp"
        android:text="@string/voltar"
        app:layout_constraintStart_toStartOf="@+id/btnAnunciar"
        app:layout_constraintTop_toBottomOf="@+id/btnAnunciar" />

    <TextView
        android:id="@+id/txtRota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/txt_rota"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>